Archive2/f6/dce4789933e642/output
main.cpp: In function 'int main()':
main.cpp:14:8: error: request for member 'operator()' is ambiguous
     f(1);
        ^
main.cpp:13:62: note: candidates are: main()::<lambda(long int)>
     auto f = make_overload([](int i) { return i; }, [](long l) { return l; });
                                                              ^
main.cpp:13:36: note:                 main()::<lambda(int)>
     auto f = make_overload([](int i) { return i; }, [](long l) { return l; });
                                    ^
